# opt_adapt

./: .gitignore  Makefile  pyproject.toml  setup.py
.github/workflows/: test_suite.yml
demos/: opt_go.py  opt_hessian.py  opt_uniform.py  plot_convergence.py  plot_different_mesh_adaptation.py  plot_different_optimization_method.py  plot_different_optimization_methods.py
demos/heat_eq_constant_source/: setup.py
demos/heat_eq_variable_source/: setup.py
demos/heat_equation/: setup.py
demos/point_discharge2d/: Makefile  plot_qoi.py  setup.py
demos/point_discharge3d/: setup.py
demos/stokes/: setup.py
demos/turbine/: Makefile  explore.py  makefile  opt_go.py  opt_hessian.py  opt_uniform.py  plot_control_space.py  plot_progress.py  plot_qoi.py  plot_results.py  setup.py
notebooks/turbine/: explore.py  makefile  opt_hessian.py  plot_bathymetry.py  setup.py  turbine-opt-uniform.ipynb
opt_adapt/: matrix.py  opt.py  utils.py
test/: test_matrix.py
tests/: test_hessian.py  test_matrix.py
