[build-system]
requires = ["setuptools"]

[project]
name = "opt_adapt"
version = "0.2"
dependencies = [
  "pre-commit",
  "pytest",
  "ruff",
]
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Yihan Liu"},
  {name = "Stephan C. Kramer"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
]
description = "PDE-constrained optimisation using mesh adaptive methods"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/opt_adapt/index.html"
Repository = "https://github.com/mesh-adaptation/opt_adapt"

[tool.setuptools]
packages = ["opt_adapt"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # mccabe complexity
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  "E501",  # line too long
  "E226",  # missing whitespace around arithmetic operator
  "E402",  # module level import not at top of file
  "E741",  # ambiguous variable name
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
